Add admin dashboard verification script and implement dashboard views
- Created `verify-admin-setup.sh` script for verifying essential components of the admin dashboard setup, including dependencies, views, CSS, controllers, routes, server configuration, and documentation.
- Added `dashboard.ejs` for displaying admin dashboard with stats cards and charts.
- Implemented `layout.ejs` as the main layout template for the admin dashboard.
- Developed `login.ejs` for admin login interface.
- Created `settings.ejs` for managing system settings with validation for new settings.
- Added `user-counts.ejs` for displaying user-specific counts and trends.
- Implemented `users.ejs` for user management with search functionality and modals for user details and password reset.

--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.10",
     "expo": "~54.0.31",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^7.5.0",
+    "nodemailer": "^6.9.7",
     "react": "19.1.0",
     "react-native": "0.81.5"
   },
